# freehekim-rag-api

./: .cf_rules.json  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  UPGRADE_NOTES.md  cli.py  pyproject.toml  requirements-dev.txt  test_rag_system.py
.codacy/: codacy.yaml
.devcontainer/: devcontainer.json
.github/: CHECKLIST.md  DEPLOYMENT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-deploy.yml  ci.yml  codeql.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  release.yml  sbom.yml  trivy.yml
deployment/: README.md
deployment/docker/: Dockerfile.api  daemon.json  docker-compose.local.yml  docker-compose.monitoring.yml  docker-compose.server.yml  setup-log-rotation.sh
deployment/monitoring/: README.md  alertmanager.yml  grafana-datasources.yml  prometheus.yml
deployment/monitoring/alerts/: rag-api-alerts.yml
deployment/monitoring/grafana-dashboards/: qdrant-overview.json  rag-overview.json
deployment/scripts/: backup.sh  backup_qdrant_user.sh  deploy.sh  health_monitor.sh  provision_freehekim_rag.sh
deployment/systemd/: freehekim-rag-backup.service  freehekim-rag-backup.timer  freehekim-rag-health-monitor.service  freehekim-rag-health-monitor.timer  freehekim-rag.service
docker/: docker-compose.monitoring.yml  docker-compose.server.yml
docs/: ARCHITECTURE.md  COST_OPTIMIZATION.md  OPERATIONS.md  PR_RELEASE_v2.2.0.md  PR_RELEASE_v2.2.1.md  README.md  RELEASE_PROCESS.md  REPO_GAP_ANALYSIS.md  TECH_PLAN_RAG_TOKENS_METRIC.md  entegrasyon-yol-haritasi.md  quality.md  release-notes-v2.2.3.md
docs/CI_WORKFLOWS/: README.md  ci.yml  trivy.yml
docs/marketing/: QDRANT_BROCHURE_TR.md
docs/wiki/: API.md  Architecture.md  CI-CD.md  CLI-Usage.md  Configuration.md  Contributing.md  Cost-Optimization.md  Deployment.md  FAQ.md  Getting-Started.md  Glossary.md  Home.md  Integration-AI-Engine-Pro.md  Metrics.md  Monitoring.md  Operations.md  Ops-CLI.md  Qdrant-Guide.md  Release-Process.md  Roadmap.md  Security.md  Troubleshooting.md
fastapi/: app.py  config.py  requirements.txt
fastapi/rag/: __init__.py  client_qdrant.py  embeddings.py  pipeline.py
infrastructure/: README.md
infrastructure/ansible/: README.md  inventory.yml  playbook.yml
infrastructure/cloudflare/: README.md  tunnel-config.yml
infrastructure/terraform/: README.md  cloud-init.yaml  main.tf  variables.tf
monitoring/: README.md
scripts/: backup.sh  deploy.sh  smoketest.sh
tests/: test_cache.py  test_config.py  test_embeddings.py  test_health.py  test_rag_smoke.py
tools/: backup_local_secrets.sh  migrate_env.sh  ops_cli.py  publish_wiki.sh  qdrant_reset.py  qdrant_verify.py  restore_local_secrets.sh  setup_self_hosted_runner.sh
